tests/cases/12_parse_error.expected
ark: parse error at line 3, col 1: expected 'then'

^
